--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,17 +13,17 @@
 <section data-section-id="4" data-category="how-it-works" data-component-id="73a6_4_02_awz" class="py-12 px-4 text-center">
   <div class="flex flex-wrap items-center justify-center -mx-8 mb-12">
     <div class="lg:w-1/3 px-8 mb-8 lg:mb-0">
-      <img class="mx-auto" src="placeholders/icons/mobile.svg" alt="" data-config-id="col1-icon">
+      <i class="fab fa-twitter w-6 h-6 mr-6"></i>
       <h3 class="text-2xl mt-6 mb-3 font-heading" data-config-id="col1-header">Contact our Sales</h3>
       <p class="text-gray-500 leading-relaxed" data-config-id="col1-desc">During the phone call we will be able to present you all details of cooperation, pricing and special offers, suited for your company.</p>
     </div>
     <div class="lg:w-1/3 px-8 mb-8 lg:mb-0">
-      <img class="mx-auto" src="placeholders/icons/pen.svg" alt="" data-config-id="col2-icon">
+      <i class="fab fa-twitter w-6 h-6 mr-6"></i>
       <h3 class="text-2xl mt-6 mb-3 font-heading" data-config-id="col2-header">Sign the documents</h3>
       <p class="text-gray-500 leading-relaxed" data-config-id="col2-desc">We can also talk during business meeting, or visit your office anytime you want! Our employees will provide proper contracts.</p>
     </div>
     <div class="lg:w-1/3 px-8 mb-8 lg:mb-0">
-      <img class="mx-auto" src="placeholders/icons/van.svg" alt="" data-config-id="col3-icon">
+      <i class="fab fa-twitter w-6 h-6 mr-6"></i>
       <h3 class="text-2xl mt-6 mb-3 font-heading" data-config-id="col3-header">Wait for delivery!</h3>
       <p class="text-gray-500 leading-relaxed" data-config-id="col3-desc">You don’t buy a pig... or shall I say a paper in a poke. The supplies will be delivered to your company every first Monday of the month.</p>
     </div>
